--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/sprind
 spring.datasource.username=root
 spring.datasource.password=1234
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
