Вторая версия SpringSecurity
- Улучшен фильтр токенов
- Добавлен UserTokenAuthProvider
- Генерация токенов вынесена в отдельный класс
- Файлы разбиты по пакетам
- Алгоритм, хэш-значение, подпись вынесены в бины

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+values.signature={"kty":"oct","k":"hi7S5RX5ZRZooHA0RKGctZ-KtR9FoESgCnH-3BNg5XI"}
